@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 25-09-2004 fixed: green videowindow & calibrationscreen after stopping a video
+  - 25-09-2004 fixed: flickering subtitles in videowindow & calibrationscreen
+  - 25-09-2004 fixed: [ 973403, 1011171 ] flickering 'video playwindow', Windowed video still shaking
   - 25-09-2004 fixed: [ 1031511 ] Playlists with accents in characters will not play
   - 25-09-2004 fixed: [ 1024803 ] Python and Mouse
   - 25-09-2004 fixed: [ 1011940 ] Pause Movie Hangs
